--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,23 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name:  cns-website
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: nginx
+      run:  cns-website
   template:
     metadata:
       labels:
-        app: nginx
+        run:  cns-website
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: cns-website
+        image: docker.io/anaisurlichs/cns-website:0.2.4
         ports:
-        - containerPort: 80
+          - containerPort: 80
+        imagePullPolicy: Always
+        resources:
+          limits:
+            memory: 512Mi
+            cpu: 200m
         securityContext:
-          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+      imagePullSecrets:
+      - name: dockerconfigjson-github-com
